# conceptual

./: .gitignore  CMakeLists.txt  LICENSE.md  README.md
include/conceptual/: concepts.hpp  conceptual.hpp  named_requirements.hpp  numeric_limits.hpp  traits.hpp
include/conceptual/aliases/: allocator_traits.hpp  numeric_limits.hpp  pointer_traits.hpp
include/conceptual/concepts/: callable.hpp  comparison.hpp  objects.hpp
include/conceptual/detail/: callable.hpp  comparison.hpp  numeric.hpp  numeric_limits_specialized.hpp  register_callable.hpp  same_as.hpp  type_categories.hpp  type_relationships.hpp
include/conceptual/named_requirements/: allocator.hpp  comparison.hpp  container.hpp  iterator.hpp  nullable_pointer.hpp
include/conceptual/numeric_limits/: limits.hpp
include/conceptual/traits/: categories.hpp  negated.hpp  properties.hpp  relationships.hpp  supported_ops.hpp
include/conceptual/traits/negated/: categories.hpp  properties.hpp
